Use dynamically generated app CDS archive